# Infra-ai-Agentic-systems

./: .env.example  Makefile  README.md  SPEC.md
.claude-flow/data/: pending-insights.jsonl
.env/: .env.infra
.github/workflows/: ci.yaml
cluster/k3d/: k3d-config.yaml
docs/: PRODUCTION-READINESS.md
eval/: README.md  golden.jsonl  pyproject.toml  run_eval.py
platform/argocd/: project.yaml  root.yaml
platform/argocd/applications/: 00-foundation.yaml  10-data.yaml  11-kong.yaml  12-observability.yaml  20-kagent.yaml  30-mcp-web-search.yaml  31-mcp-graphiti-memory.yaml  40-agent-backend.yaml  41-agent-cr.yaml
platform/data/: README.md  falkordb.yaml  kustomization.yaml  postgres.yaml
platform/foundation/: kustomization.yaml  namespaces.yaml  network-policies.yaml
platform/foundation/secrets/: falkordb-auth.secret.example.yaml  gemini-api.secret.example.yaml  jwt-secret.secret.example.yaml  postgres-creds.secret.example.yaml
platform/kagent/: README.md  agent.yaml  helmfile.yaml  install.md  model-config.yaml  networkpolicy.yaml  remote-mcp-graphiti-memory.yaml  remote-mcp-web-search.yaml  values.yaml
platform/kong/: README.md  helmfile.yaml  kong.yaml  values.yaml
platform/kong/k8s/: kong-config-configmap.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secrets.example.yaml
platform/observability/: README.md  grafana.yaml  kustomization.yaml  prometheus.yaml
platform/observability/dashboards/: mvp-agent.json
services/agent-backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/agent-backend/app/: __init__.py  a2a_client.py  auth.py  config.py  logging_config.py  main.py  memory.py  metrics.py  sessions.py
services/agent-backend/k8s/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
services/mcp-graphiti-memory/: Dockerfile  README.md  pyproject.toml  server.py
services/mcp-graphiti-memory/k8s/: deployment.yaml  kustomization.yaml  networkpolicy.yaml
services/mcp-web-search/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
services/mcp-web-search/k8s/: deployment.yaml  networkpolicy.yaml
