[project]
name = "agent-backend"
version = "0.1.0"
description = "FastAPI agent-backend: auth + sessions + memory; delegates reasoning to a kagent Agent over A2A."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyjwt>=2.9",
    "asyncpg>=0.30",
    "graphiti-core[falkordb,google-genai]>=0.13",
    "httpx>=0.27",
    "prometheus-client>=0.21",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
