[project]
name = "mcp-graphiti-memory"
version = "0.1.0"
description = "FastMCP STREAMABLE_HTTP server wrapping Graphiti-on-FalkorDB (Gemini) for the kagent MVP agent"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "graphiti-core[falkordb,google-genai]>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.ruff]
target-version = "py312"
line-length = 100
