[project]
name = "mcp-web-search"
version = "0.1.0"
description = "FastMCP STREAMABLE_HTTP web-search tool server (DuckDuckGo) for the kagent MVP agent"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.ruff]
target-version = "py312"
line-length = 100
